// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Engine Contract v1 — capture engine output (goldens) damage (strict, auto) 1`] = `
"{
  "candidates": [
    {
      "decomposition": [
        "damage"
      ],
      "form": "damage",
      "functionalStatement": "v1 returns a minimal deterministic analysis: surface form is preserved, decomposition is the whole word, and the vowel path is extracted from the Seven-vowel set (A/E/I/O/U/Y/Ë).",
      "language": "unknown",
      "notes": null,
      "vowelPath": "A-A-E"
    }
  ],
  "engineVersion": "v1.0.0",
  "evidence": {
    "basis": "damage",
    "math7": {
      "indices": [
        0,
        0,
        1
      ],
      "sum": 1,
      "totalMod7": 1,
      "vowels": [
        "A",
        "A",
        "E"
      ]
    },
    "surfacePath": "A-A-E",
    "surfaceVowels": [
      "A",
      "A",
      "E"
    ]
  },
  "meta": {
    "canonVersion": "canon-v1.0",
    "contractVersion": "scientific-output-v1.1",
    "engineVersion": "v1.0.0",
    "rulesetVersion": "ruleset-v1.2"
  },
  "normalizedWord": "damage",
  "warnings": null,
  "word": "damage"
}"
`;

exports[`Engine Contract v1 — capture engine output (goldens) father (strict, auto) 1`] = `
"{
  "candidates": [
    {
      "decomposition": [
        "father"
      ],
      "form": "father",
      "functionalStatement": "v1 returns a minimal deterministic analysis: surface form is preserved, decomposition is the whole word, and the vowel path is extracted from the Seven-vowel set (A/E/I/O/U/Y/Ë).",
      "language": "unknown",
      "notes": null,
      "vowelPath": "A-E"
    }
  ],
  "engineVersion": "v1.0.0",
  "evidence": {
    "basis": "father",
    "math7": {
      "indices": [
        0,
        1
      ],
      "sum": 1,
      "totalMod7": 1,
      "vowels": [
        "A",
        "E"
      ]
    },
    "surfacePath": "A-E",
    "surfaceVowels": [
      "A",
      "E"
    ]
  },
  "meta": {
    "canonVersion": "canon-v1.0",
    "contractVersion": "scientific-output-v1.1",
    "engineVersion": "v1.0.0",
    "rulesetVersion": "ruleset-v1.2"
  },
  "normalizedWord": "father",
  "warnings": null,
  "word": "father"
}"
`;

exports[`Engine Contract v1 — capture engine output (goldens) love (strict, auto) 1`] = `
"{
  "candidates": [
    {
      "decomposition": [
        "love"
      ],
      "form": "love",
      "functionalStatement": "v1 returns a minimal deterministic analysis: surface form is preserved, decomposition is the whole word, and the vowel path is extracted from the Seven-vowel set (A/E/I/O/U/Y/Ë).",
      "language": "unknown",
      "notes": null,
      "vowelPath": "O-E"
    }
  ],
  "engineVersion": "v1.0.0",
  "evidence": {
    "basis": "love",
    "math7": {
      "indices": [
        3,
        1
      ],
      "sum": 4,
      "totalMod7": 4,
      "vowels": [
        "O",
        "E"
      ]
    },
    "surfacePath": "O-E",
    "surfaceVowels": [
      "O",
      "E"
    ]
  },
  "meta": {
    "canonVersion": "canon-v1.0",
    "contractVersion": "scientific-output-v1.1",
    "engineVersion": "v1.0.0",
    "rulesetVersion": "ruleset-v1.2"
  },
  "normalizedWord": "love",
  "warnings": null,
  "word": "love"
}"
`;

exports[`Engine Contract v1 — capture engine output (goldens) mathematics (strict, auto) 1`] = `
"{
  "candidates": [
    {
      "decomposition": [
        "mathematics"
      ],
      "form": "mathematics",
      "functionalStatement": "v1 returns a minimal deterministic analysis: surface form is preserved, decomposition is the whole word, and the vowel path is extracted from the Seven-vowel set (A/E/I/O/U/Y/Ë).",
      "language": "unknown",
      "notes": null,
      "vowelPath": "A-E-A-I"
    }
  ],
  "engineVersion": "v1.0.0",
  "evidence": {
    "basis": "mathematics",
    "math7": {
      "indices": [
        0,
        1,
        0,
        2
      ],
      "sum": 3,
      "totalMod7": 3,
      "vowels": [
        "A",
        "E",
        "A",
        "I"
      ]
    },
    "surfacePath": "A-E-A-I",
    "surfaceVowels": [
      "A",
      "E",
      "A",
      "I"
    ]
  },
  "meta": {
    "canonVersion": "canon-v1.0",
    "contractVersion": "scientific-output-v1.1",
    "engineVersion": "v1.0.0",
    "rulesetVersion": "ruleset-v1.2"
  },
  "normalizedWord": "mathematics",
  "warnings": null,
  "word": "mathematics"
}"
`;

exports[`Engine Contract v1 — capture engine output (goldens) study (strict, auto) 1`] = `
"{
  "candidates": [
    {
      "decomposition": [
        "study"
      ],
      "form": "study",
      "functionalStatement": "v1 returns a minimal deterministic analysis: surface form is preserved, decomposition is the whole word, and the vowel path is extracted from the Seven-vowel set (A/E/I/O/U/Y/Ë).",
      "language": "unknown",
      "notes": null,
      "vowelPath": "U-Y"
    }
  ],
  "engineVersion": "v1.0.0",
  "evidence": {
    "basis": "study",
    "math7": {
      "indices": [
        4,
        5
      ],
      "sum": 9,
      "totalMod7": 2,
      "vowels": [
        "U",
        "Y"
      ]
    },
    "surfacePath": "U-Y",
    "surfaceVowels": [
      "U",
      "Y"
    ]
  },
  "meta": {
    "canonVersion": "canon-v1.0",
    "contractVersion": "scientific-output-v1.1",
    "engineVersion": "v1.0.0",
    "rulesetVersion": "ruleset-v1.2"
  },
  "normalizedWord": "study",
  "warnings": null,
  "word": "study"
}"
`;
